@@ -2,7 +2,6 @@ package com.humanitaire.backend.service;
 
 import com.humanitaire.backend.dto.ConvoyDTO;
 import com.humanitaire.backend.entity.Convoy;
-import com.humanitaire.backend.entity.Mission;
 import com.humanitaire.backend.exception.ResourceNotFoundException;
 import com.humanitaire.backend.repository.ConvoyRepository;
 import com.humanitaire.backend.repository.MissionRepository;
@@ -13,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,43 +20,35 @@ public class ConvoyService {
     private final ConvoyRepository convoyRepository;
     private final MissionRepository missionRepository;
 
-    public Page<ConvoyDTO> getAllConvoys(Pageable pageable) {
+    public Page<ConvoyDTO> getAll(Pageable pageable) {
         return convoyRepository.findAll(pageable).map(this::toDTO);
     }
 
-    public Page<ConvoyDTO> getConvoysByStatus(String status, Pageable pageable) {
-        Convoy.ConvoyStatus convoyStatus = Convoy.ConvoyStatus.valueOf(status.toUpperCase());
-        return convoyRepository.findByStatus(convoyStatus, pageable).map(this::toDTO);
+    public ConvoyDTO getById(Long id) {
+        return toDTO(findById(id));
+    }
+
+    public Page<ConvoyDTO> search(String query, Pageable pageable) {
+        return convoyRepository.search(query, pageable).map(this::toDTO);
+    }
+
+    public Page<ConvoyDTO> getByStatus(String status, Pageable pageable) {
+        return convoyRepository.findByStatus(Convoy.ConvoyStatus.valueOf(status), pageable).map(this::toDTO);
     }
 
     public List<ConvoyDTO> getActiveConvoys() {
-        return convoyRepository.findByStatus(Convoy.ConvoyStatus.IN_TRANSIT).stream()
-                .map(this::toDTO).collect(Collectors.toList());
-    }
-
-    public ConvoyDTO getConvoyById(Long id) {
-        Convoy convoy = convoyRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Convoi", "id", id));
-        return toDTO(convoy);
+        return convoyRepository.findByStatusNot(Convoy.ConvoyStatus.DELIVERED)
+                .stream().map(this::toDTO).toList();
     }
 
     @Transactional
-    public ConvoyDTO createConvoy(ConvoyDTO dto) {
-        Convoy convoy = toEntity(dto);
-        if (dto.getMissionId() != null) {
-            Mission mission = missionRepository.findById(dto.getMissionId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Mission", "id", dto.getMissionId()));
-            convoy.setMission(mission);
-        }
-        convoy = convoyRepository.save(convoy);
-        return toDTO(convoy);
+    public ConvoyDTO create(ConvoyDTO dto) {
+        return toDTO(convoyRepository.save(toEntity(dto)));
     }
 
     @Transactional
-    public ConvoyDTO updateConvoy(Long id, ConvoyDTO dto) {
-        Convoy convoy = convoyRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Convoi", "id", id));
-
+    public ConvoyDTO update(Long id, ConvoyDTO dto) {
+        Convoy convoy = findById(id);
         convoy.setName(dto.getName());
         convoy.setDepartureCity(dto.getDepartureCity());
         convoy.setDestinationCity(dto.getDestinationCity());
@@ -70,44 +60,48 @@ public class ConvoyService {
         convoy.setDestinationLongitude(dto.getDestinationLongitude());
         convoy.setEstimatedArrival(dto.getEstimatedArrival());
         convoy.setDepartureTime(dto.getDepartureTime());
-        convoy.setStatus(Convoy.ConvoyStatus.valueOf(dto.getStatus()));
+        if (dto.getStatus() != null) convoy.setStatus(Convoy.ConvoyStatus.valueOf(dto.getStatus()));
         convoy.setDescription(dto.getDescription());
         convoy.setCargo(dto.getCargo());
-
-        convoy = convoyRepository.save(convoy);
-        return toDTO(convoy);
+        return toDTO(convoyRepository.save(convoy));
     }
 
-    public void deleteConvoy(Long id) {
-        if (!convoyRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Convoi", "id", id);
-        }
+    @Transactional
+    public void delete(Long id) {
         convoyRepository.deleteById(id);
     }
 
-    private ConvoyDTO toDTO(Convoy convoy) {
+    private Convoy findById(Long id) {
+        return convoyRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Convoi non trouvé avec l'id: " + id));
+    }
+
+    private ConvoyDTO toDTO(Convoy c) {
         return ConvoyDTO.builder()
-                .id(convoy.getId())
-                .name(convoy.getName())
-                .departureCity(convoy.getDepartureCity())
-                .destinationCity(convoy.getDestinationCity())
-                .currentLatitude(convoy.getCurrentLatitude())
-                .currentLongitude(convoy.getCurrentLongitude())
-                .departureLatitude(convoy.getDepartureLatitude())
-                .departureLongitude(convoy.getDepartureLongitude())
-                .destinationLatitude(convoy.getDestinationLatitude())
-                .destinationLongitude(convoy.getDestinationLongitude())
-                .estimatedArrival(convoy.getEstimatedArrival())
-                .departureTime(convoy.getDepartureTime())
-                .status(convoy.getStatus() != null ? convoy.getStatus().name() : null)
-                .description(convoy.getDescription())
-                .cargo(convoy.getCargo())
-                .missionId(convoy.getMission() != null ? convoy.getMission().getId() : null)
+                .id(c.getId())
+                .name(c.getName())
+                .departureCity(c.getDepartureCity())
+                .destinationCity(c.getDestinationCity())
+                .currentLatitude(c.getCurrentLatitude())
+                .currentLongitude(c.getCurrentLongitude())
+                .departureLatitude(c.getDepartureLatitude())
+                .departureLongitude(c.getDepartureLongitude())
+                .destinationLatitude(c.getDestinationLatitude())
+                .destinationLongitude(c.getDestinationLongitude())
+                .estimatedArrival(c.getEstimatedArrival())
+                .departureTime(c.getDepartureTime())
+                .status(c.getStatus() != null ? c.getStatus().name() : null)
+                .description(c.getDescription())
+                .cargo(c.getCargo())
+                .missionId(c.getMission() != null ? c.getMission().getId() : null)
+                .missionTitle(c.getMission() != null ? c.getMission().getTitle() : null)
+                .createdAt(c.getCreatedAt())
+                .updatedAt(c.getUpdatedAt())
                 .build();
     }
 
     private Convoy toEntity(ConvoyDTO dto) {
-        return Convoy.builder()
+        Convoy.ConvoyBuilder builder = Convoy.builder()
                 .name(dto.getName())
                 .departureCity(dto.getDepartureCity())
                 .destinationCity(dto.getDestinationCity())
@@ -121,7 +115,10 @@ public class ConvoyService {
                 .departureTime(dto.getDepartureTime())
                 .status(dto.getStatus() != null ? Convoy.ConvoyStatus.valueOf(dto.getStatus()) : Convoy.ConvoyStatus.PENDING)
                 .description(dto.getDescription())
-                .cargo(dto.getCargo())
-                .build();
+                .cargo(dto.getCargo());
+        if (dto.getMissionId() != null) {
+            missionRepository.findById(dto.getMissionId()).ifPresent(builder::mission);
+        }
+        return builder.build();
     }
 }
